# disscalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: warnings.cmake
src/: CMakeLists.txt  main.cpp
src/disscalc/: args-parsing.cpp  args-parsing.hpp  command-line.cpp  command-line.hpp  dissonance.cpp  dissonance.hpp  options.cpp  options.hpp  output.cpp  output.hpp  table.hpp
tests/: CMakeLists.txt  command-line.test.cpp
